window: Fix meta_window_move_frame in the context of the new invisible borders

https://bugzilla.gnome.org/show_bug.cgi?id=659643